--- a/.github/workflows/gitevents-ics.yml
+++ b/.github/workflows/gitevents-ics.yml
@@ -12,7 +12,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - name: GitEvents ICS Generator
-        uses: gitevents/ics@v1.4.1
+        uses: gitevents/ics@v1.4.2
+        env:
+          DEBUG: 'true'
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           default-timezone: 'America/Denver'
