--- a/.github/workflows/gitevents-ics.yml
+++ b/.github/workflows/gitevents-ics.yml
@@ -14,7 +14,7 @@ jobs:
       - name: GitEvents ICS Generator
         uses: gitevents/ics@v1.4.2
         env:
-          DEBUG: 'true'
+          DEBUG: 'body-parser:*'
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           default-timezone: 'America/Denver'
