--- a/.github/ISSUE_TEMPLATE/event.yml
+++ b/.github/ISSUE_TEMPLATE/event.yml
@@ -22,6 +22,13 @@ body:
     validations:
       required: true
   - type: textarea
+    id: talks
+    attributes:
+      label: talks
+      description: List of talks for this event
+    validations:
+      required: false
+  - type: textarea
     id: sponsors
     attributes:
       label: Event Sponsor(s)
